@@ -8,6 +8,7 @@ import java.nio.charset.Charset;
 
 import org.ait.module.java.unittest.JsonTester;
 import org.ait.project.unittestexample.modules.food.transform.FoodMapper;
+import org.apache.commons.io.IOUtils;
 import org.json.JSONException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Order;
@@ -41,8 +42,9 @@ public class FoodDTOTest extends JsonTester<FoodDTO> {
 		// serialize the object to test, into JSON
 		String actual = om.writeValueAsString(getObjectToTest());
 		
-		// compare the expected JSON provided, against the JSON written by the ObjectMapper 
-		JSONAssert.assertEquals(new String(getSourceJson().readAllBytes(), Charset.defaultCharset()), actual, JSONCompareMode.STRICT);
+		// compare the expected JSON provided, against the JSON written by the ObjectMapper
+		byte[] source= IOUtils.toByteArray(getSourceJson());
+		JSONAssert.assertEquals(new String(source, Charset.defaultCharset()), actual, JSONCompareMode.STRICT);
 	}
 	
 	@Order(2)
